--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -122,3 +122,16 @@
     @apply bg-background text-foreground;
   }
 }
+
+.ewert-regular {
+  font-family: "Ewert", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.playfair-display {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
